<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">amarnaso-reflex</string>
    <string name="delete_statistics">Delete Stats</string>

    <string name="onePlayerStats">1 Player Statistics</string>
    <string name="twoPlayerStats">2 Player Statistics</string>
    <string name="threePlayerStats">3 Player Statistics</string>
    <string name="fourPlayerStats">4 Player Statistics</string>

    <string name="P1">PLAYER 1</string>
    <string name="P2">PLAYER 2</string>
    <string name="P3">PLAYER 3</string>
    <string name="P4">PLAYER 4</string>

    <string name="stats">Statistics</string>
    <string name="buzzer">Buzzer</string>
    <string name="timer">Timer</string>

    <string name="twoPlayers">2 Players</string>
    <string name="threePlayers">3 Players</string>
    <string name="fourPlayers">4 Players</string>

    <string name="timerStats">Timer Statistics</string>
    <string name="buzzerStats">Buzzer Statistics</string>
    <string name="removeAllStats">Remove All Statistics</string>
    <string name="emailStats">Email Stats</string>
    <string name="clicker">Clicker</string>

    <string name="category">Category</string>
    <string name="allTimes">All</string>
    <string name="lastTen">10</string>
    <string name="lastHundred">100</string>
    <string name="min">Minimum:</string>
    <string name="max">Maximum:</string>
    <string name="med">Median:</string>
    <string name="avg">Average:</string>
    <string name="textField">0</string>
    <string name="title_activity_timer">timerActivity</string>

    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_buzzer_select">BuzzerSelectActivity</string>
    <string name="title_activity_two_player_mode">TwoPlayerMode</string>
    <string name="title_activity_three_player_mode">three_player_mode</string>
    <string name="title_activity_four_player_mode">four_player_mode</string>
    <string name="title_activity_buzzer_statistics">BuzzerStatisticsActivity</string>
    <string name="title_activity_timer_statistics">TimerStatistics</string>
    <string name="title_activity_dialog">DialogActivity</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialogMessage">To play: Wait for the clicker to turn green, and then try to click the clicker as quickly as possible.
        To start: Press Ok and wait for the button to turn green. Remember green means go, red means stop.
        ***In the event that you press the clicker before it turns green, the time will not be recorded and the game will restart.***</string>

</resources>
