<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/P1"
        android:textSize="15pt"
        android:id="@+id/playerOneButtonM4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/P2"
        android:textSize="15pt"
        android:id="@+id/playerTwoButtonM4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/P3"
        android:textSize="15pt"
        android:id="@+id/playerThreeButtonM4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/P4"
        android:textSize="15pt"
        android:id="@+id/playerFourButtonM4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25" />
</LinearLayout>