<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_red_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/P1"
        android:onClick="playerOneClickM4"
        android:textSize="15pt"
        android:id="@+id/playerOneButtonM4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/P2"
        android:onClick="playerTwoClickM4"
        android:background="@android:color/holo_green_dark"
        android:textSize="15pt"
        android:id="@+id/playerTwoButtonM4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="15pt"
        android:text="@string/P3"
        android:onClick="playerThreeClickM4"
        android:id="@+id/playerThreeButtonM4"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_green_dark"
        android:layout_weight="1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/P4"
        android:textSize="15pt"
        android:onClick="playerFourClickM4"
        android:background="@android:color/holo_green_dark"
        android:id="@+id/playerFourButtonM4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />
</LinearLayout>