<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@android:color/holo_red_dark"
    android:backgroundTint="@android:color/holo_red_dark"
    tools:context=".MainMenu"
    >

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/stats"
        android:textSize="15pt"
        android:onClick="statisticsAction"
        android:id="@+id/statisticsButton"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/buzzer"
        android:textSize="15pt"
        android:id="@+id/buzzerButton"
        android:background="@android:color/holo_green_dark"
        android:onClick="buzzerAction"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_green_dark"
        android:text="@string/timer"
        android:textSize="15pt"
        android:onClick="timerAction"
        android:layout_marginBottom="5dp"
        android:id="@+id/timerButton"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>